--- a/hosts.yaml
+++ b/hosts.yaml
@@ -1,4 +1,8 @@
 R1:
-  hostname: sr.norns_BGP.lab
+  hostname: sr.norns_BGP1.lab
+  groups:
+    - ios
+R3:
+  hostname: sr.norns_BGP3.lab
   groups:
     - ios
